--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,7 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: '''Neath Verdun, August-October, 1914'
 url: http://www.gutenberg.org/ebooks/46770
